feat(main); fixed the div with the off-canvas and trhe breadcrump

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <header>
         <!-- Navbar -->
-        <nav class="navbar navbar-expand-lg mt-2">
+        <nav class="navbar navbar-expand-lg">
             <div class="container-fluid flex-nowrap">
                 <!-- Logo -->
               <a class="navbar-brand" href="#">
@@ -35,7 +35,7 @@
               </form>
 
               <!-- Icons -->
-              <div id="navbarSupportedContent d-flex">
+              <div id="navbarSupportedContent">
                 <ul class="nav flex-nowrap d-flex">
                   <li class="nav-item">
                     <a class="d-none d-lg-block nav-link text-body-secondary" aria-current="page" href="#">
@@ -77,86 +77,93 @@
         </nav>
     </header>
 
-    <main class="why">
+    <main class="d-flex">
         <!-- DIV'S SIDE-BAR -->
-        <div class="d-flex flex-column justify-content-between flex-shrink-0 bg-body-tertiary h-100" style="width: 4.5rem;">
+        <div data-bs-theme="dark" class="bg-primary-subtle d-flex flex-column justify-content-between flex-shrink-0 bg-body-tertiary h-100" style="width: fit-content;">
             <ul class="nav nav-pills nav-flush flex-column text-center">
               <li>
-                <a href="#" class="nav-link py-3"  data-bs-placement="right" aria-label="Dashboard" data-bs-original-title="Dashboard">
+                <a href="#" class="d-flex align-items-center gap-2 text-white text-capitalize nav-link py-2"  data-bs-placement="right" aria-label="Dashboard" data-bs-original-title="Dashboard">
                     <i class="fa-solid fa-house"></i>
+                    <span class="d-none d-lg-block">home</span>
                 </a>
               </li>
               <li>
-                <a href="#" class="nav-link py-3"  data-bs-placement="right" aria-label="Orders" data-bs-original-title="Orders">
+                <a href="#" class="d-flex align-items-center gap-2 text-white text-capitalize nav-link py-2" data-bs-placement="right" aria-label="Orders" data-bs-original-title="Orders">
                     <i class="fa-solid fa-chart-simple"></i>
+                    <span class="d-none d-lg-block">stats</span>
                 </a>
               </li>
               <li>
-                <a href="#" class="nav-link py-3"  data-bs-placement="right" aria-label="Products" data-bs-original-title="Products">
+                <a href="#" class="d-flex align-items-center gap-2 text-white text-capitalize nav-link py-2"  data-bs-placement="right" aria-label="Products" data-bs-original-title="Products">
                     <i class="fa-solid fa-signal"></i>
+                    <span class="d-none d-lg-block">signals</span>
                 </a>
               </li>
             </ul>
             <div>
-              <a href="#" class="d-flex align-items-center justify-content-center p-3
+              <a href="#" class="text-white text-capitalize d-flex align-items-center justify-content-center gap-2 p-3
               text-decoration-none">
                 <i class="fa-solid fa-gear"></i>
+                <span class="d-none d-lg-block">admin</span>
               </a>
             </div>
-          </div>
-        <!-- DIV'S MAIN CONTENT -->
-        <div class="main_content ms-auto">
-            <!-- DIV ABOUT THE STUDENTS -->
-            <!-- <div class="bg-primary">
-                <div class="container">
-                    <div class="row">
-                        <div class="py-3 col-12 col-md-4 order-md-3">
-                            <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight">Toggle right offcanvas</button>
-                            <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRight" aria-labelledby="offcanvasRightLabel">
-                                <div class="offcanvas-header">
-                                    <h5 class="offcanvas-title" id="offcanvasRightLabel">Offcanvas right</h5>
-                                    <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-                                </div>
-                                <div class="offcanvas-body">
-                                      ...
-                                </div>
-                            </div>
+        </div>
+
+        <!-- DIV'S STUDENTS AND INFORMATIONS -->
+        <div class="w-100">
+            <div class="container-fluid bg-primary">
+                <div class="row">
+                    <div class="col-12 col-md-4 order-md-3 py-2">
+                        <div class="d-flex align-items-center column-gap-2">
+                            <span class="text-white text-capitalize">
+                                nuovo studente
+                            </span>
+                            <button class="btn btn-primary border-white" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight">
+                                <i class="fa-solid fa-plus"></i>
+                            </button>
                         </div>
-                        <div class="py-3 col-12 col-md-4 order-md-1">
-                            <div class="d-flex">
-                                <h4>boolean</h4>
-                                <button>Piano blaze</button>
-                            </div>
+
+                        <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRight" aria-labelledby="offcanvasRightLabel">
+                          <div class="offcanvas-header">
+                            <h5 class="offcanvas-title" id="offcanvasRightLabel">Offcanvas right</h5>
+                            <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                          </div>
+                          <div class="offcanvas-body">
+                            ...
+                          </div>
                         </div>
-                        <div class="py-3 col-12 col-md-4 order-md-2">
-                            <p>Studenti online negli ultimi 30 minuti</p>
-                            <span>125</span>
-                        </div>
+                    </div>
+    
+                    <div class="col-12 col-md-4 order-md-1 py-2">
+                        <nav aria-label="breadcrumb">
+                            <ol class="breadcrumb text-white align-items-center column-gap-2">
+                              <li>
+                                <h3 class="text-capitalize">
+                                    boolean</h3>
+                              </li>
+                              <li class="bg-black bg-opacity-50 px-2 rounded-5 text-white breadcrumb-item active" aria-current="page">Piano blaze</li>
+                            </ol>
+                        </nav>
+
+                        <nav style="--bs-breadcrumb-divider: '>>';" aria-label="breadcrumb">
+                            <ol class="breadcrumb">
+                              <li class="breadcrumb-item bg-black bg-opacity-50 px-2 rounded-5 text-white "> 3 app</li>
+                              <li class=" active bg-black bg-opacity-50 px-2 rounded-5 text-white" aria-current="page">
+                                <i class="fa-solid fa-plus"></i>
+                              </li>
+                              <li class="active bg-black bg-opacity-50 px-2 rounded-5 text-white d-none d-lg-block" aria-current="page">Boolean mobile app</li>
+                              <li class="active bg-black bg-opacity-50 px-2 rounded-5 text-white d-none d-lg-block" aria-current="page">Boolean web app</li>
+                              <li class="active bg-black bg-opacity-50 px-2 rounded-5 text-white d-none d-lg-block" aria-current="page">Boolean blog app</li>
+                            </ol>
+                        </nav>
+                    </div>
+    
+                    <div class="col-12 col-md-4 order-md-2 py-2
+                    text-white">
+                        <p>Studenti online negli ultimi 30 minuti</p>
+                        <span class="fs-1">125</span>
                     </div>
                 </div>
-            </div> -->
-            <div class="d-lg-flex">
-                <!-- DIV ABOUT THE FUTURE CLASSES AND F.A.Q-->
-                <!-- <div class="container my-3">
-                    <div class="row">
-                        <div class="col-12 col-lg-7 border">
-                            LAOM
-                        </div>
-                        <div class="col-12 col-lg-5 border">
-                            LAOM
-                        </div>
-                </div> -->
-                <!-- DIV ABOUT THE TODO LIST AND ACTIVE STUDENTS -->
-                <!-- <div class="why container w-lg-25 my-3">
-                    <div class="row">
-                        <div class="col-12">
-                            LAOM
-                        </div>
-                        <div class="col-12">
-                            LAOM
-                        </div>
-                    </div>
-                </div> -->
             </div>
         </div>
     </main>
