--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
                 <div class="border-bottom bg-secondary-subtle">
                   <h4 class="text-capitalize px-1 pb-1">prossime classi</h4>
                 </div>
-                <div class="space">
+                <div class="px-3">
                   <table class="table align-middle table-hover table-responsive text-center mb-4">
                     <thead>
                       <tr>
@@ -458,6 +458,38 @@
                     todo                  
                   </h4>
                 </div>
+
+                <ul class="list-group p-3">
+                  <li class="list-group-item">
+                    <input class="form-check-input me-1" type="checkbox" value="" id="firstCheckbox">
+                    <label class="form-check-label" for="firstCheckbox">
+                      Kickoff nuove classi
+                    </label>
+                  </li>
+                  <li class="list-group-item">
+                    <input class="form-check-input me-1" type="checkbox" value="" id="secondCheckbox">
+                    <label class="form-check-label" for="secondCheckbox">
+                      Lezione su Bootstrap 5 in classe #75
+                    </label>
+                  </li>
+                  <li class="list-group-item">
+                    <input class="form-check-input me-1" type="checkbox" value="" id="thirdCheckbox">
+                    <label class="form-check-label" for="thirdCheckbox">
+                      Controllare username github studenti
+                    </label>
+                  </li>
+                </ul>
+              </div>
+
+              <!-- DIV'S STATS -->
+              <div class="border rounded my-4">
+                <ul class="list-group p-3">
+                  <li class="list-group-item">An item</li>
+                  <li class="list-group-item">A second item</li>
+                  <li class="list-group-item">A third item</li>
+                  <li class="list-group-item">A fourth item</li>
+                  <li class="list-group-item">And a fifth one</li>
+                </ul>
               </div>
             </div>
           </div>
@@ -465,11 +497,7 @@
       </div>
     </main>
 
-    <footer>
-
-    </footer>
-
-    <!-- Bootstarp javascript's link -->
+    <!-- Bootstrap javascript's link -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 </html>
